fixed bug: time not as visible

--- a/style.css
+++ b/style.css
@@ -13,12 +13,13 @@ body {
   align-items: center;
 }
 
-.time {
+#time {
   position: absolute;
   text-align: center;
   color: white;
   font-family: "Audiowide", sans-serif;
   font-size: 3.5em;
+  visibility: hidden;
 }
 #startBtn {
   position: absolute;
@@ -28,8 +29,8 @@ body {
   display: inline-block;
   padding: 1px 3px;
   border-radius: 50%;
-  width: 233px;
-  height: 233px;
+  width: 235px;
+  height: 235px;
 }
 #startBtn img {
   height: 100px;
